# Q-Mix_report_writer

./: .gitignore  README.md  drafting_debug.txt  drafting_debug2.txt  drafting_debug3.txt  drafting_rounds.txt  pyproject.toml  requirements.txt  setup.py  trace_summary.txt
agent_baseline/: README.md  requirements.txt  run_benchmark.py  summarize_results.py
agents/: __init__.py  agent_registry.py  analyze_agent.py  code_writing.py  collector.py  data_analyst.py  final_decision.py  lead_architect.py  math_solver.py  reasoning_agent.py  researcher.py  reviewer.py  technical_writer.py
configs/: default.yaml
datasets/: __init__.py  base_dataset.py  frontierscience_dataset.py  gaia_dataset.py  hle_dataset.py  humaneval_dataset.py  livecodebench_dataset.py  math_dataset.py  mmlu_dataset.py  tasks.py
experiments/: accuracy.py  eval.py  run_handcrafted.py  run_qmix_eval.py  run_qmix_train.py
graph/: graph.py  node.py
handcrafted_graph/: __init__.py  graph.py  phases.py  runner.py  scheduler.py  state.py
llm/: __init__.py  format.py  gpt_chat.py  llm.py  ollama_chat.py  price.py
prompt/: __init__.py  agentic_prompt_set.py  collector_prompt.py  common.py  hle_prompt_set.py  math_prompt_set.py  prompt_set.py  redacting_prompt_set.py
qmix/: __init__.py  agent_network.py  mixing_network.py  qmix_trainer.py  replay_buffer.py
qmix_report_writer/: __init__.py
result/: aime2025_qmix.json  aime2025_qmix.jsonl  aime2026_qmix.json  aime2026_qmix.jsonl  beyond_aime_qmix.json  beyond_aime_qmix.jsonl  hmmt2025_qmix.json  hmmt2025_qmix.jsonl  humaneval_qmix.json  (+3 more)
(+210 files in other folders)
