[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmix_report_writer"
version = "0.1.1"
description = "Agentic RAG-based report writing (handcrafted multi-agent pipeline + QMIX baseline)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Leo Beaumont" }]
dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "openai>=1.12.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "shortuuid>=1.0.11",
    "class-registry>=2.1.2",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "datasets>=2.16.0",
    "huggingface-hub>=0.20.0",
    "jsonlines>=4.0.0",
    "asyncio-pool>=0.6.0",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
    "bokeh>=3.9.0",
    "markdown>=3.10.2",
    "pypdf>=4.0.0",
    "python-docx>=0.8.11",
    "rank-bm25>=0.2.2",
]

[tool.setuptools.packages.find]
# Only the library package ships; dev/data dirs (experiments, scripts, tests,
# datasets, chroma_data, output, ...) stay out of the installed distribution.
include = ["qmix_report_writer*"]

[tool.setuptools.package-data]
# Bundled, non-Python resources that must travel with the package.
qmix_report_writer = ["configs/*.yaml", "assets/*", "**/prompts/*"]
